--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,6 +4,6 @@ icon: fa-user
 order: 2
 ---
 
-<a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
+< Un  href = " # "  clase = " Imagen destacada " > < img  src = " activos / images / pic09.jpg "  alt = " " /> </ a >
 
-<p>EDITAR AQUI.</p>
+< p > EDITAR AQUI. </ p >
