--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -3,6 +3,6 @@ title: Sobre mi
 icon: fa-user
 order: 2
 ---
-< Un  href = " # "  clase = " Imagen destacada " > < img  src = " activos / images / pic09.jpg "  alt = " " /> </ a >
+<a href="#" class="image featured"><img src="LINK AQUI" alt="" /></a>
 
 < p > EDITAR AQUI. </ p >
