--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -3,6 +3,6 @@ title: Sobre mi
 icon: fa-user
 order: 2
 ---
-<a href="#" class="image featured"><img src="LINK AQUI" alt="" /></a>
+<a href="#" class="image featured"><img src="/assets/images/img12.jpgI" alt="" /></a>
 
 < p > EDITAR AQUI. </ p >
