--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -3,6 +3,6 @@ title: Sobre mi
 icon: fa-user
 order: 2
 ---
-<a href="#" class="image featured"><img src="/assets/images/img12.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="/assets/images/e6370cd0-4cf0-4c86-bf65-f4f23bb1e7bf.jpg" alt="" /></a>
 
 <p> EDITAR AQUI. </p>
